# models/virtual_machine_family.go
@@ -1,0 +1,59 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// VirtualMachineFamily virtual machine family
+//
+// swagger:model VirtualMachineFamily
+type VirtualMachineFamily struct {
+
+	// Unique identifier for the virtual machine family
+	ID string `json:"id,omitempty"`
+
+	// the name of the virtual machine family
+	Name string `json:"name,omitempty"`
+
+	// total number of this family of virtual machines that may be used
+	Quota int64 `json:"quota,omitempty"`
+
+	// total number of this family of virtual machines that are in use
+	Usage int64 `json:"usage,omitempty"`
+}
+
+// Validate validates this virtual machine family
+func (m *VirtualMachineFamily) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// ContextValidate validates this virtual machine family based on context it is used
+func (m *VirtualMachineFamily) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *VirtualMachineFamily) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *VirtualMachineFamily) UnmarshalBinary(b []byte) error {
+	var res VirtualMachineFamily
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
