# models/virtual_machine_nic.go
@@ -1,0 +1,56 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// VirtualMachineNic virtual machine nic
+//
+// swagger:model VirtualMachineNic
+type VirtualMachineNic struct {
+
+	// id of the network interface (more properties may be added later)
+	ID string `json:"id,omitempty"`
+
+	// name of the network interface
+	Name string `json:"name,omitempty"`
+
+	// private IP of the network interface
+	PrivateIP string `json:"privateIp,omitempty"`
+}
+
+// Validate validates this virtual machine nic
+func (m *VirtualMachineNic) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// ContextValidate validates this virtual machine nic based on context it is used
+func (m *VirtualMachineNic) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *VirtualMachineNic) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *VirtualMachineNic) UnmarshalBinary(b []byte) error {
+	var res VirtualMachineNic
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
